--- a/app.json
+++ b/app.json
@@ -5,6 +5,7 @@
     "pages/detail/detail",
     "pages/cart/cart",
     "pages/map/map",
+    "pages/search/search",
     "pages/mine/mine"
   ],
   "window": {
