--- a/project.config.json
+++ b/project.config.json
@@ -38,7 +38,7 @@
 			"list": []
 		},
 		"miniprogram": {
-			"current": 5,
+			"current": 6,
 			"list": [
 				{
 					"id": -1,
@@ -73,7 +73,13 @@
 				{
 					"id": -1,
 					"name": "map",
-					"pathName": "pages/map/map"
+					"pathName": "pages/map/map",
+					"query": ""
+				},
+				{
+					"id": -1,
+					"name": "search",
+					"pathName": "pages/search/search"
 				}
 			]
 		}
